[package]
name = "ceph-safe-disk"
version = "0.1.1"
repository = "https://github.com/CanonicalLtd/ceph_safe_disk"
description = "Ceph disk safety removal tool"
authors = [
	"Alberto Corona <ac@albertocorona.com>",
	"Chris Holcombe <xfactor973@gmail.com>"
]
license = "MIT"
exclude = [
	"test/*",
	"debian/*",
]
keywords = ["ceph"]

[dependencies]
getopts = "~0.2"
ansi_term = "~0.9"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
users = "~0.5"

[lib]
name = "ceph"
path = "lib/lib.rs"
