[package]
name = "ceph-safe-disk"
version = "0.1.5"
repository = "https://github.com/CanonicalLtd/ceph_safe_disk"
description = "Ceph disk safety removal tool"
edition = '2018'
authors = [
	"Alberto Corona <ac@albertocorona.com>",
	"Chris Holcombe <xfactor973@gmail.com>"
]
license = "MIT"
exclude = [
	"test/*",
	"debian/*",
]
keywords = ["ceph"]

[dependencies]
getopts = "~0.2"
ansi_term = "~0.11"
log = "~0.4"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
users = "~0.8"

[lib]
name = "ceph_safe_disk"
path = "lib/lib.rs"
